{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 67,
  "lineage": "4ab0fd4c-1bb1-90d9-5f06-1c0f37c44530",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:090486721290:loadbalancer/app/zero-downtime-alb/7cf89d09dc542205",
            "arn_suffix": "app/zero-downtime-alb/7cf89d09dc542205",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "zero-downtime-alb-1062756322.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:090486721290:loadbalancer/app/zero-downtime-alb/7cf89d09dc542205",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "zero-downtime-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0df881a6250d34b7e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00c3e56fb4c1d4d03"
              },
              {
                "subnet_id": "subnet-0e71a17d132e8976c"
              },
              {
                "subnet_id": "subnet-0f2dc3e5f9ca119d8"
              }
            ],
            "subnets": [
              "subnet-00c3e56fb4c1d4d03",
              "subnet-0e71a17d132e8976c",
              "subnet-0f2dc3e5f9ca119d8"
            ],
            "tags": {
              "Environment": "Dev"
            },
            "tags_all": {
              "Environment": "Dev"
            },
            "vpc_id": "vpc-0cccbb9ea0e1cf717",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.alb.aws_security_group.lb_sg",
            "module.alb.data.aws_subnets.subnets"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:090486721290:listener/app/zero-downtime-alb/7cf89d09dc542205/c3b8720311c72a7c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:090486721290:targetgroup/zero-dt-deployment-tgt-grp/456c9afaa25aa9bb",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:090486721290:listener/app/zero-downtime-alb/7cf89d09dc542205/c3b8720311c72a7c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:090486721290:loadbalancer/app/zero-downtime-alb/7cf89d09dc542205",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.alb",
            "module.alb.aws_lb_target_group.target_group",
            "module.alb.aws_security_group.lb_sg",
            "module.alb.data.aws_subnets.subnets"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:090486721290:targetgroup/zero-dt-deployment-tgt-grp/456c9afaa25aa9bb",
            "arn_suffix": "targetgroup/zero-dt-deployment-tgt-grp/456c9afaa25aa9bb",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:090486721290:targetgroup/zero-dt-deployment-tgt-grp/456c9afaa25aa9bb",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:090486721290:loadbalancer/app/zero-downtime-alb/7cf89d09dc542205"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "zero-dt-deployment-tgt-grp",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0cccbb9ea0e1cf717"
          }
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:090486721290:security-group/sg-0df881a6250d34b7e",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0df881a6250d34b7e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "zero-downtime-deployment-alb-sg",
            "name_prefix": "",
            "owner_id": "090486721290",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0cccbb9ea0e1cf717"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.asg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:090486721290:security-group/sg-0bb4ed40d18601fe8",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0bb4ed40d18601fe8",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0df881a6250d34b7e"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "zero-downtime-deployment-ec2-sg",
            "name_prefix": "",
            "owner_id": "090486721290",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0cccbb9ea0e1cf717"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.alb",
            "module.alb.aws_lb_listener.alb_listener",
            "module.alb.aws_lb_target_group.target_group",
            "module.alb.aws_security_group.lb_sg",
            "module.alb.data.aws_subnets.subnets"
          ]
        }
      ]
    }
  ]
}